@@ -22,6 +22,8 @@
 	- fix: AIX has sizeof(uint_16) != sizeof(mode_t) verify cast needed.
 	- fix: --relocate missing trailing slash (#28874,#25876).
 	- fix: --excludedoc shouldn't create empty doc dir (#14531).
+	- fix: %_netsharedpath needs to look at basenames (#26561).
+	- fix: --excludepath was broken (#24434).
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
